--- a/index.html
+++ b/index.html
@@ -13,27 +13,23 @@
         import { getFirestore, collection, addDoc, serverTimestamp, query, onSnapshot, orderBy, limit } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+        // --- 核心配置区 ---
+        // 请将下面的内容替换为您在 Firebase 控制台获取的真实配置
+       const firebaseConfig = {
+          apiKey: "AIzaSyCv8KymzOvoTnPH6y-8vPIrzfmmvg_4KEo",
+          authDomain: "postpartummassage-decc7.firebaseapp.com",
+          projectId: "postpartummassage-decc7",
+          storageBucket: "postpartummassage-decc7.firebasestorage.app",
+          messagingSenderId: "217683596543",
+          appId: "1:217683596543:web:79c23cae80498e5f37e8ca",
+          measurementId: "G-9HD8LQLG9L"
+        };
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyCv8KymzOvoTnPH6y-8vPIrzfmmvg_4KEo",
-  authDomain: "postpartummassage-decc7.firebaseapp.com",
-  projectId: "postpartummassage-decc7",
-  storageBucket: "postpartummassage-decc7.firebasestorage.app",
-  messagingSenderId: "217683596543",
-  appId: "1:217683596543:web:79c23cae80498e5f37e8ca",
-  measurementId: "G-9HD8LQLG9L"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+        // 初始化 Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const auth = getAuth(app);
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'xiyue-booking-app';
 
         // 导出到全局供应用逻辑使用
         window.fb = { db, collection, addDoc, serverTimestamp, auth, signInAnonymously, onAuthStateChanged, appId, query, onSnapshot, orderBy, limit };
